--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -196,6 +196,12 @@ a {
 	}
 }
 
+iframe {
+	border: none;
+	border-radius: 6px;
+	box-shadow: var(--box-shadow-base);
+}
+
 form {
 	display: flex;
 	flex-direction: row;
